Added SecurityConfig.java, making endpoints reacheable; updated WebhookController.java